--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,12 @@
     <string name="tab_about">About Tab</string>
 
     <string name="action_settings">Settings</string>
+
+
+    <string name="scramble_section">Scramble an Image</string>
+    <string name="scramble_button">Scramble!</string>
+    <string name="scramble_password">Password</string>
+    <string name="scramble_rows"># Rows</string>
+    <string name="scramble_columns"># Cols</string>
+    <string name="scramble_random">Random</string>
 </resources>
