Add Help Text Draft, Add Copy parameters button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
  If you want to send through apps that compress images, also input\n</string>
     <string name="scrambling_widthheight_text2">as width and</string>
     <string name="scrambling_widthheight_text3">as height.</string>
+
+    <string name="scrambling_copied">Copied parameters (except password) in terms of: #rows #cols Width Height</string>
 </resources>
