--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,9 +25,11 @@
     <string name="scramble_option_pre">Number of Rows and Columns: </string>
     <string name="scramble_options">Options: </string>
     <string-array name="scramble_options_array">
-        <item>Generate number of rows and columns automatically from password</item>
+        <item>Set everything automatically, just pick the password</item>
+        <item>Generate number of rows and columns automatically from password, image may be cropped due to dimension constraint</item>
         <item>Pick number of rows and columns, but may be adjusted up due to image dimension constraint</item>
         <item>Pick number of rows and columns, crop image to adjust to selected number of rows and columns</item>
+        <item>Pick number of rows and columns, extend image to adjust to selected number of rows and columns</item>
     </string-array>
     <string name="scramble_option_0">Very Coarse</string>
     <string name="scramble_option_1">Coarse</string>
